kyverno-policies/openshift-kyverno-policies/kyverno-privileged/bad-pod-kyverno-privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-privileged
spec:
  hostNetwork: false
  hostPID: false
  hostIPC: false
  securityContext:
    runAsUser: 1000
    fsGroup: 1001
    supplementalGroups: [2002]
  volumes:
    - name: config-volume
      configMap:
        name: my-config-map
  containers:
  - name: container01
    image: busybox
    command:
      - sleep
      - "3600"
    ports:
    - hostPort: 800
      containerPort: 800
    volumeMounts:
    - name: config-volume
      mountPath: /etc/config
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      privileged: false
      seLinuxOptions:
        level: "s0:c123,c456"
